spade-tests/src/snapshots/spade_tests__hir_lowering__tests__instantiating_builtin_generic_pipeline_which_is_non_intrinsic_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(1) a<T>(t: T) -> T {
    reg;
        t
}

entity main() -> int<32> {
    inst(1) a(0)
}



