spade-tests/src/snapshots/spade_tests__hir_lowering__tests__memories_cannot_be_part_of_struct.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct port Outer {
    inner: Memory<bool, 100>
}

entity main(o: Outer) {

}



