spade-tests/src/snapshots/spade_tests__hir_lowering__tests__mismatched_pipeline_depth_if.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(5) X(clk: clk) -> bool __builtin__
pipeline(4) Y(clk: clk) -> bool __builtin__

pipeline(5) main(clk: clk, x: bool) -> bool {
        let _ = if x {
            inst(5) X(clk)
        }
        else {
            inst(4) Y(clk)
        };
    reg*5;
        x
}


error: All subexpressions need the same pipeline delay
   ┌─ testinput:8:14
   │    
 5 │             let _ = if x {
   │   ╭──────────────────────'
 6 │   │             inst(5) X(clk)
 7 │   │         }
   │   ╰─────────' But this has delay 5
 8 │             else {
   │ ╭────────────────^
 9 │ │               inst(4) Y(clk)
10 │ │           };
   │ ╰───────────^ This has delay 4


