spade-tests/src/snapshots/spade_tests__hir_lowering__tests__missing_inner_members_works.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: patterns Y::A(X::A, X::B), Y::A(X::B, X::A), Y::A(X::B, X::B) not covered
   ┌─ testinput:11:5
   │  
11 │ ╭     match y {
12 │ │         Y::A(X::A, X::A) => true,
13 │ │     }
   │ ╰─────^ patterns Y::A(X::A, X::B), Y::A(X::B, X::A), Y::A(X::B, X::B) not covered


