spade-tests/src/snapshots/spade_tests__hir_lowering__tests__missing_integer_patterns_reports_correctly.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: patterns -128..-1, 1..127 not covered
  ┌─ testinput:2:5
  │  
2 │ ╭     match a {
3 │ │         0 => true,
4 │ │     }
  │ ╰─────^ patterns -128..-1, 1..127 not covered


