spade-tests/src/snapshots/spade_tests__hir_lowering__tests__missing_subpatterns_error_correctly.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: patterns X::A(false), X::A(true) not covered
  ┌─ testinput:7:5
  │  
7 │ ╭     match x {
8 │ │         X::B => true,
9 │ │     }
  │ ╰─────^ patterns X::A(false), X::A(true) not covered


